--- a/index.html
+++ b/index.html
@@ -60,71 +60,71 @@
         <div class="container">
             <input type="radio" name="slide" id="c1" checked>
             <label for="c1" class="card">
-                <div class="row">
+                <!-- <div class="row">
                     <div class="icon">1</div>
                     <div class="description">
                         <h4></h4>
                         <p></p>
                     </div>
-                </div>
+                </div> -->
             </label>
             <input type="radio" name="slide" id="c2" >
             <label for="c2" class="card">
-                <div class="row">
+                <!-- <div class="row">
                     <div class="icon">2</div>
                     <div class="description">
                         <h4></h4>
                         <p></p>
                     </div>
-                </div>
+                </div> -->
             </label>
             <input type="radio" name="slide" id="c3" >
             <label for="c3" class="card">
-                <div class="row">
+                <!-- <div class="row">
                     <div class="icon">3</div>
                     <div class="description">
                         <h4></h4>
                         <p></p>
                     </div>
-                </div>
+                </div> -->
             </label>
-            <input type="radio" name="slide" id="c4" >
+            <input type="radio" name="slide" id="c4" checked >
             <label for="c4" class="card">
-                <div class="row">
+                <!-- <div class="row">
                     <div class="icon">4</div>
                     <div class="description">
                         <h4></h4>
                         <p></p>
                     </div>
-                </div>
+                </div> -->
             </label>
             <input type="radio" name="slide" id="c5" >
             <label for="c5" class="card">
-                <div class="row">
+                <!-- <div class="row">
                     <div class="icon"></div>
                     <div class="description">
                         <h4></h4>
                         <p></p>
                     </div>
-                </div>
+                </div> -->
             </label><input type="radio" name="slide" id="c6" >
             <label for="c6" class="card">
-                <div class="row">
+                <!-- <div class="row">
                     <div class="icon"></div>
                     <div class="description">
                         <h4></h4>
                         <p></p>
                     </div>
-                </div>
+                </div> -->
             </label><input type="radio" name="slide" id="c7" >
             <label for="c7" class="card">
-                <div class="row">
+                <!-- <div class="row">
                     <div class="icon"></div>
                     <div class="description">
                         <h4></h4>
                         <p></p>
                     </div>
-                </div>
+                </div> -->
             </label>
 
         </div>
