--- a/index.html
+++ b/index.html
@@ -325,7 +325,43 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          ...
+            <div class="cards">
+                <div class="container">
+                    <div class="car">
+                        <div class="personaje">
+                            <div class="imagen_personaje"></div>
+                            <div class="detalle">
+                                <h2>ILMIN IL EGO</h2>
+                                <p>$ 160.000</p>
+                                <button type="button" class="btn btn-dark"><a href="https://wa.link/g2gbwi" style="color: white;">¡Comprar ahora!</a></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="car">
+                        <div class="personaje_2">
+                            <div class="imagen_personaje_2"></div>
+                            <div class="detalle_2">
+                                <h2>goku</h2>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione asperiores 
+                                    labore blanditiis, magni tempora possimus.</p>
+                                <div class="btn"><h6>leer mas</h6></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="car">
+                        <div class="personaje_3">
+                            <div class="imagen_personaje_3"></div>
+                            <div class="detalle_3">
+                                <h2>gohan</h2>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione asperiores 
+                                    labore blanditiis, magni tempora possimus.</p>
+                                <div class="btn"><h6>leer mas</h6></div>
+                            </div>
+                        </div>
+                    </div>
+            
+                </div>
+            </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
