Arreglo del primer carrusel

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
     <div class="modal-dialog modal-fullscreen">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Hombres</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -333,7 +333,8 @@
                             <div class="detalle">
                                 <h2>ILMIN IL EGO</h2>
                                 <p>$ 160.000</p>
-                                <button type="button" class="btn btn-dark"><a href="https://wa.link/g2gbwi" style="color: white;">¡Comprar ahora!</a></button>
+                                <button type="button" class="btn btn-dark"><a href="https://wa.link/g2gbwi"
+                                     style="color: white;">¡Comprar ahora!</a></button>
                             </div>
                         </div>
                     </div>
@@ -341,10 +342,10 @@
                         <div class="personaje_2">
                             <div class="imagen_personaje_2"></div>
                             <div class="detalle_2">
-                                <h2>goku</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione asperiores 
-                                    labore blanditiis, magni tempora possimus.</p>
-                                <div class="btn"><h6>leer mas</h6></div>
+                                <h2>ILMIN IL EGO</h2>
+                                <p>$ 160.000</p>
+                                <button type="button" class="btn btn-dark"><a href="https://wa.link/g2gbwi" 
+                                    style="color: white;">¡Comprar ahora!</a></button>
                             </div>
                         </div>
                     </div>
@@ -352,10 +353,10 @@
                         <div class="personaje_3">
                             <div class="imagen_personaje_3"></div>
                             <div class="detalle_3">
-                                <h2>gohan</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione asperiores 
-                                    labore blanditiis, magni tempora possimus.</p>
-                                <div class="btn"><h6>leer mas</h6></div>
+                                <h2>ILMIN IL EGO</h2>
+                                <p>$ 160.000</p>
+                                <button type="button" class="btn btn-dark"><a href="https://wa.link/g2gbwi" 
+                                    style="color: white;">¡Comprar ahora!</a></button>
                             </div>
                         </div>
                     </div>
