--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <div class="contenedor-header">
         <header>
             <div class="logo">
-                <a href="#"><img src="../imgs/logo solo en dorado.png" style="width: 40%; height: 20%; border: none;" alt=""></a>
+                <a href="../index.html"><img src="../imgs/logo solo en dorado.png" style="width: 40%; height: 20%; border: none;" alt=""></a>
             </div>
             <nav id="nav" >
                 <ul>
-                    <li><a href="../src/index.html" onclick="seleccionar()">INICIO</a></li>
-                    <li><a href="./indexTienda.html" onclick="seleccionar()">HOMBRE</a></li>
+                    <li><a href="../index.html" onclick="seleccionar()">INICIO</a></li>
+                    <li><a href="../indexTienda.html" onclick="seleccionar()">HOMBRE</a></li>
                     <li><a href="#skills" onclick="seleccionar()">MUJERES</a></li>
                     <li><a href="#contacto" onclick="seleccionar()">CONTACTO</a></li>
                     <li><a href="#portafolio" onclick="seleccionar()">ADMINISTRADOR</a></li>
