--- a/indexTienda.html
+++ b/indexTienda.html
@@ -16,8 +16,8 @@
             </div>
             <nav id="nav" >
                 <ul>
-                    <li><a href="../src/index.html" onclick="seleccionar()">INICIO</a></li>
-                    <li><a href="../tienda/tienda.html" onclick="seleccionar()">HOMBRE</a></li>
+                    <li><a href="../index.html" onclick="seleccionar()">INICIO</a></li>
+                    <li><a href="../indexTienda.html" onclick="seleccionar()">HOMBRE</a></li>
                     <li><a href="#skills" onclick="seleccionar()">MUJERES</a></li>
                     <li><a href="#contacto" onclick="seleccionar()">CONTACTO</a></li>
                     <li><a href="#portafolio" onclick="seleccionar()">ADMINISTRADOR</a></li>
