--- a/index.html
+++ b/index.html
@@ -35,17 +35,10 @@
 
     <!-- Seccion inicio -->
     <section id="inicio" class="inicio" >
-        <div class="contenido-banner" style="padding: 5%;">
-            <!-- <div class="contenedor-img">
-                <img src="./WhatsApp Image 2024-03-25 at 22.53.08.jpeg" alt="">
-            </div> -->
+        <div class="contenido-banner" ">
+            
             <h1>D'SANTOS PERFUMERIA</h1>
             <H6>Oler rico es obligacion, verse bien es una opció</H6>
-            <!-- <div class="redes">
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-            </div> -->
         </div>
     </section>
     <!-- Hasta aca debe mostrarse en todas las paginas -->
