--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!-- Seccion inicio -->
     <section id="inicio" class="inicio" >
-        <div class="contenido-banner" ">
+        <div class="contenido-banner" >
             
             <h1>D'SANTOS PERFUMERIA</h1>
             <H6>Oler rico es obligacion, verse bien es una opció</H6>
