--- a/index.html
+++ b/index.html
@@ -43,78 +43,14 @@
     </section>
     <!-- Hasta aca debe mostrarse en todas las paginas -->
 
-    <div class="wrapper">
-        <div class="container">
-            <input type="radio" name="slide" id="c1" checked>
-            <label for="c1" class="card">
-                <!-- <div class="row">
-                    <div class="icon">1</div>
-                    <div class="description">
-                        <h4></h4>
-                        <p></p>
-                    </div>
-                </div> -->
-            </label>
-            <input type="radio" name="slide" id="c2" >
-            <label for="c2" class="card">
-                <!-- <div class="row">
-                    <div class="icon">2</div>
-                    <div class="description">
-                        <h4></h4>
-                        <p></p>
-                    </div>
-                </div> -->
-            </label>
-            <input type="radio" name="slide" id="c3" >
-            <label for="c3" class="card">
-                <!-- <div class="row">
-                    <div class="icon">3</div>
-                    <div class="description">
-                        <h4></h4>
-                        <p></p>
-                    </div>
-                </div> -->
-            </label>
-            <input type="radio" name="slide" id="c4" checked >
-            <label for="c4" class="card">
-                <!-- <div class="row">
-                    <div class="icon">4</div>
-                    <div class="description">
-                        <h4></h4>
-                        <p></p>
-                    </div>
-                </div> -->
-            </label>
-            <input type="radio" name="slide" id="c5" >
-            <label for="c5" class="card">
-                <!-- <div class="row">
-                    <div class="icon"></div>
-                    <div class="description">
-                        <h4></h4>
-                        <p></p>
-                    </div>
-                </div> -->
-            </label><input type="radio" name="slide" id="c6" >
-            <label for="c6" class="card">
-                <!-- <div class="row">
-                    <div class="icon"></div>
-                    <div class="description">
-                        <h4></h4>
-                        <p></p>
-                    </div>
-                </div> -->
-            </label><input type="radio" name="slide" id="c7" >
-            <label for="c7" class="card">
-                <!-- <div class="row">
-                    <div class="icon"></div>
-                    <div class="description">
-                        <h4></h4>
-                        <p></p>
-                    </div>
-                </div> -->
-            </label>
-
+   <div class="container-imagenes">
+        <div class="tarjetas">
+            <img src="./imgs/hombre/AL HARAMAIN-AMBER OUD GOLD EDITION.jpg" id="img1" alt="">
+            <img src="./imgs/perfumes mujer/Rasasi-hawas for her caja .jpg"  id="img2" alt="">
+            <img src="./imgs/hombre/Ilmin-femme.png" id="img3" alt="">
+            <img src="./imgs/perfumes mujer/Moschino-toy-2 caja.jpg" id="img4" alt="">
         </div>
+   </div>
 
         
     </div>
