--- a/index.html
+++ b/index.html
@@ -56,11 +56,9 @@
     </div>
     <!-- carrusel Catalogo hombre  -->
     <div class="SeccionH">
-        <h2>Define tu Estilo con Nosotros</h2>
+        <h2>Encuentra tu Estilo con Nosotros</h2>
         <h5><strong>
-            Únete a la élite de hombres exclusivos que eligen definir su presencia con nuestras fragancias.
-                Descubre la esencia de la verdadera elegancia masculina y déjate llevar por la magia de nuestro
-                 universo perfumado.
+            Define un olor con el que relacionen tú esencia.
         </strong></h5>
     </div>
     <div class="carrusel">
