--- a/indexTienda.html
+++ b/indexTienda.html
@@ -39,8 +39,8 @@
             <div class="item">
                 <span class="titulo-item">acqua di gio</span>
                 <img src="./imgs/hombre/acqua di gio.jpg" alt="" class="img-item">
-                <span class="precio-item">$150.000</span>
-                <button type="button" class="btn btn-warning"><a href="https://wa.link/03yzuy">¡Comprar Ahora¡</a></button>
+                <span class="precio-item">$420.000</span>
+                <button type="button" class="btn btn-warning"><a href="https://wa.link/rbqizg">¡Comprar Ahora¡</a></button>
                 <!-- <button class="btn-item">Agregar al carrito</button> -->
             </div>
             <div class="item">
